# eric.benchmark

./: .gitignore  CMakeLists.txt  README.md
benchmark/format/: CMakeLists.txt  format.cpp  ostream.cpp  printf.cpp
helper/: CMakeLists.txt
helper/include/: cout_redirect.hpp  table_entry.hpp
helper/src/: CMakeLists.txt  cout_redirect.cpp  table_entry.cpp
